--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
-  font-size: 1rem;
-  margin: 0;
+  font-size: 1.2rem;
+  background: #0e1212;
+  color: white;
 }
 
 .d-flex {
@@ -202,7 +209,6 @@ body {
 }
 
 a {
-  color: black;
   text-decoration: none;
 }
 
@@ -221,6 +227,10 @@ a:hover {
 
 .b-shadow {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05) , 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+}
+
+.c-tertiary {
+  color: #D502F2;
 }
 
 .c-secondary {
