--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
   font-size: 1.2rem;
   background: #0e1212;
   color: white;
+  padding-top: 100px;
 }
 
 .d-flex {
@@ -215,6 +216,14 @@ a {
 a:hover {
   cursor: pointer;
   opacity: 0.8;
+}
+
+h1, .h1 {
+  font-size: 2.5rem;
+}
+
+h2, .h2 {
+  font-size: 2rem;
 }
 
 .h3, h3 {
