--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -15,3 +15,10 @@
 #ul-header li svg:hover {
   fill: white;
 }
+
+@media screen and (min-width: 768px) {
+  #header {
+    width: 80%;
+    margin-top: 15px;
+  }
+}
