--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,6 +2,9 @@
   width: 100%;
   position: fixed;
   top: 0;
+  background: #0e1212;
+  border-radius: 2rem;
+  box-shadow: 40px 20px 10px #0e1212;
 }
 
 #ul-header li a {
@@ -19,6 +22,6 @@
 @media screen and (min-width: 768px) {
   #header {
     width: 80%;
-    margin-top: 15px;
+    padding-top: 15px;
   }
 }
