--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,8 +3,9 @@
   position: fixed;
   top: 0;
   background: #0e1212;
-  border-radius: 2rem;
-  box-shadow: 40px 20px 10px #0e1212;
+  border-bottom-left-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+  box-shadow: 5px 5px 5px #0e1212;
 }
 
 #ul-header li a {
