--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  letter-spacing: 0.75px;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
   background: #0e1212;
   color: white;
   padding-top: 150px;
+  
 }
 
 .d-flex {
@@ -105,22 +107,9 @@ body {
   opacity: 0.5;
 }
 
-.btn:active {
-  background: black;
-}
-
 .btn-icon {
   background: transparent;
   border: none;
-}
-
-.back-icon {
-  background: #ff3535;
-  border-radius: 50%;
-  margin: 0.5rem;
-  padding: 0.25rem;
-  position: fixed;
-  width: 26px;
 }
 
 .float-icon {
@@ -198,12 +187,16 @@ body {
   font-size: 1rem;
 }
 
-.fs-4 {
+.fs-3 {
   font-size: 1.5rem;
 }
 
+.fs-4 {
+  font-size: 2rem;
+}
+
 .fs-5 {
-  font-size: 1.4rem;
+  font-size: 3rem;
 }
 
 .w-100 {
@@ -265,4 +258,14 @@ h2, .h2 {
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+.link-shadow {
+  margin: 5px;
+  padding: 20px 5px;
+  letter-spacing: 3px;
+  font-weight: bold;
+  border-radius: 5px;
+  border: 1px solid #9A03FC;
+  transition: 0.3s;
 }
