--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,5 +1,5 @@
 #projects {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -7,8 +7,12 @@
   display: flex;
   flex-flow: row wrap;
   margin: 4rem;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+}
+
+.project-card div {
+  width: 80%;
 }
 
 .project-card img {
@@ -19,11 +23,20 @@
 }
 
 .project-card div {
-  max-width: 50%;
+  max-width: 60%;
   display: flex;
   flex-flow: column;
   gap: 1rem;
 }
+
+.project-card a {
+  color: #9A03FC;
+}
+
+.project-card a:hover {
+  color: #c176f3;
+}
+
 
 @media screen and (max-width: 768px) {
   #projects {
@@ -33,4 +46,44 @@
   .project-card {
     margin: 5rem 0;
   }
+}
+
+.loader {
+  list-style: none;
+  display: flex;
+}
+
+.loader li {
+  margin: 0.5rem;
+  width: 1.2em;
+  height: 1.2em;
+  border-radius: 50%;
+  background: #9A03FC;
+  animation: loader 0.6s ease-in-out infinite alternate;
+}
+
+.loader li:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.loader li:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes loader {
+  from {
+      transform: translateY(0);
+  }
+  to {
+      transform: translateY(-1em);
+  }
+}
+
+.back-end {
+  display: flex;
+  min-height: 300px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  letter-spacing: 3px;
 }
