--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -28,7 +28,7 @@
   width: 40%;
 }
 
-a:after {
+.icon:after {
   content: '';
   width: 80px;
   height: 80px;
@@ -45,7 +45,7 @@ a:after {
   color: #fff;
 }
 
-a:hover::after {
+.icon:hover::after {
   bottom: 0;
 }
 
