--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,3 +1,44 @@
+.main-contact {
+  margin-top: 60px;
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
+.form-contact {
+  width: 80%;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.form-contact input, .form-contact textarea {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 1rem;
+  resize:none;
+}
+
+.form-contact button {
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  width: 30%;
+  border-radius: 4px;
+  background-color: #ccc;
+}
+
+.form-contact h1 {
+  font-size: 2rem;
+  font-weight: 400;
+}
+
 .socialicons {
   margin-top: 100px;
   display: flex;
@@ -25,7 +66,7 @@
 }
 
 .socialicons .icon img {
-  width: 40%;
+  width: 50%;
 }
 
 .icon:after {
