--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -7,9 +7,14 @@
 .project-card {
   display: flex;
   flex-flow: row wrap;
-  margin: 4rem;
+  margin-top: 4rem;
   justify-content: space-around;
   align-items: center;
+}
+
+.stack-selected {
+  background-color: #9A03FC;
+  color: #fff;
 }
 
 .project-card div {
@@ -24,18 +29,24 @@
 }
 
 .project-card div {
-  max-width: 60%;
+  max-width: 70%;
   display: flex;
   flex-flow: column;
   gap: 1rem;
 }
 
 .project-card a {
+  border: 1px solid #9A03FC;
   color: #9A03FC;
+  min-width: 12rem;
+  align-self: flex-start;
+  border-radius: 10px;
+  padding: 0.5rem;
+  font-size: 1.5rem;
 }
 
 .project-card a:hover {
-  color: #c176f3;
+  color: #fff;
 }
 
 
