--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -8,17 +8,8 @@
 }
 
 .section-home h1 {
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-weight: 300;
-}
-
-@media (max-width: 768px) {
-  .section-home h1 {
-    font-size: 2rem;
-  }
-  .section-home {
-    flex-direction: column-reverse;
-  }
 }
 
 .perfil-img {
@@ -52,7 +43,7 @@
 
 .skills-section {
   margin: 100px 5px;
-  min-height: 60vh;
+  min-height: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -70,7 +61,8 @@
 }
 
 .skill-card img {
-  width: 96px;
+  width: 90%;
+  max-width: 96px;
 }
 
 .skill-card p {
@@ -89,7 +81,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 40px 20px;
+  margin: 100px 20px 40px;
   padding: 20px;
   font-size: 1.2rem;
   gap: 1.5rem;
@@ -102,4 +94,14 @@
 
 .footer-home a {
   font-size: 1.7rem;
+}
+
+@media (max-width: 768px) {
+  .section-home h1 {
+    font-size: 2rem;
+  }
+  
+  .section-home {
+    flex-direction: column-reverse;
+  }
 }
