--- a/src/App.css
+++ b/src/App.css
@@ -255,14 +255,6 @@ h2, .h2 {
   list-style: none;
 }
 
-@media (min-width: 768px) {
-  body {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
 main {
   display: flex;
   flex-direction: column;
@@ -281,4 +273,18 @@ footer {
   border: 1px solid #9A03FC;
   transition: 0.3s;
   cursor: pointer;
+}
+
+@media (min-width: 768px) {
+  body {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (min-width: 1624px) {
+  body {
+    font-size: 1.6rem;
+  }
 }
