--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,6 +1,6 @@
 .main-contact {
   margin-top: 60px;
-  min-height: 84vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -9,6 +9,7 @@
 }
 
 .form-contact {
+  margin-top: 100px;
   width: 80%;
   max-width: 600px;
   display: flex;
@@ -99,6 +100,10 @@
 
 @media (max-width: 768px) {
 
+  .form-contact {
+    margin-top: 50px;
+  }
+
   .socialicons {
     justify-content: center;
     align-items: center;
@@ -122,4 +127,10 @@
     width: 70%;
   }
 
+}
+
+@media (max-width: 1200px) {
+  .socialicons {
+    max-width: 700px;
+  }
 }
