--- a/src/App.css
+++ b/src/App.css
@@ -258,6 +258,7 @@ h2, .h2 {
 main {
   display: flex;
   flex-direction: column;
+  margin-top: 60px;
 }
 
 footer {
@@ -272,7 +273,6 @@ footer {
   border-radius: 5px;
   border: 1px solid #9A03FC;
   transition: 0.3s;
-  cursor: pointer;
 }
 
 @media (min-width: 768px) {
