--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -23,6 +23,10 @@
 
 .project-card div {
   width: 80%;
+  max-width: 850px;
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
 }
 
 .project-card img {
@@ -30,13 +34,6 @@
   border-radius: 50%;
   width: 50%;
   max-width: 300px;
-}
-
-.project-card div {
-  max-width: 70%;
-  display: flex;
-  flex-flow: column;
-  gap: 1rem;
 }
 
 .project-card a {
